# komanawa-basgra-nz-py

./: .gitignore  BASGRA_in_out.csv  BASGRA_in_out.txt  CITATION.cff  LICENSE  README.md  README.rst  __init__.py  basgra_python.py  environment.yml  get_fortran_module.py  input_output_keys.py  pyproject.toml  python_env  python_env.txt  test_basgra_python.py
check_basgra_python/: __init__.py  forgiving_test.py  support_for_tests.py  test_basgra_python.py  update_test_datasets.py
check_basgra_python/test_data/: Lincoln_Broadfield_Ews.csv  hamilton_ruakura_ews2010-2013_pet.csv  hamilton_ruakura_ews2010-2013_rad.csv  hamilton_ruakura_ews2010-2013_temp.csv  test_auto_harv_fixed_data.csv  test_auto_harv_trig_data.csv  test_fixed_harvest_man_data.csv  test_full_refill.csv  test_harv_trig_man_data.csv  test_irr_paw_data.csv  test_irrigation_fraction_output.csv  test_irrigation_trigger_output.csv  test_leap.csv  test_org_basgra.csv  test_pass_soil_moist_fc.csv  test_pass_soil_moist_paw.csv  test_pet_calculation.csv  test_reseed.csv  test_runoff_from_rain.csv  (+11 more)
computational_resourse_use/: __init__.py  support_for_resource_use.py  test_memory_use.py
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/autoapi/: index.html
docs_build/: conf.py  index.rst
fortran_BASGRA_NZ/: basgraf.f95  brent.f95  compile_BASGRA_gfortran.bat  environment.f95  h2o_storage.f95  parameters_site.f95  plant.f95  plant_andrea.f95  set_params.f95  soil.f95
irrigation_development/: get_weather_data.py  run_basgra_irrigation.py
irrigation_test/: __init__.py  get_weather_data.py  run_basgra_irrigation.py
ongoing_development/: __init__.py
pasture_growth/: __init__.py
supporting_functions/: __init__.py  conversions.py  cumulative_annual_data.py  output_description.csv  output_metadata.py  plotting.py  support_for_resource_use.py  test_memory_use.py  woodward_2020_params.py
test_fortran_dll/: __init__.py  example.f90  test.f90  test.py
tests/: forgiving_test.py  support_for_tests.py  test_basgra_python.py  update_test_datasets.py
(+134 files in other folders)
